Release 1.21.3 (release)