@@ -4,267 +4,267 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class sr {
-   public static final aly<egh<?, ?>> a = sm.a("crimson_fungus");
-   public static final aly<egh<?, ?>> b = sm.a("crimson_fungus_planted");
-   public static final aly<egh<?, ?>> c = sm.a("warped_fungus");
-   public static final aly<egh<?, ?>> d = sm.a("warped_fungus_planted");
-   public static final aly<egh<?, ?>> e = sm.a("huge_brown_mushroom");
-   public static final aly<egh<?, ?>> f = sm.a("huge_red_mushroom");
-   public static final aly<egh<?, ?>> g = sm.a("oak");
-   public static final aly<egh<?, ?>> h = sm.a("dark_oak");
-   public static final aly<egh<?, ?>> i = sm.a("pale_oak");
-   public static final aly<egh<?, ?>> j = sm.a("pale_oak_creaking");
-   public static final aly<egh<?, ?>> k = sm.a("birch");
-   public static final aly<egh<?, ?>> l = sm.a("acacia");
-   public static final aly<egh<?, ?>> m = sm.a("spruce");
-   public static final aly<egh<?, ?>> n = sm.a("pine");
-   public static final aly<egh<?, ?>> o = sm.a("jungle_tree");
-   public static final aly<egh<?, ?>> p = sm.a("fancy_oak");
-   public static final aly<egh<?, ?>> q = sm.a("jungle_tree_no_vine");
-   public static final aly<egh<?, ?>> r = sm.a("mega_jungle_tree");
-   public static final aly<egh<?, ?>> s = sm.a("mega_spruce");
-   public static final aly<egh<?, ?>> t = sm.a("mega_pine");
-   public static final aly<egh<?, ?>> u = sm.a("super_birch_bees_0002");
-   public static final aly<egh<?, ?>> v = sm.a("super_birch_bees");
-   public static final aly<egh<?, ?>> w = sm.a("swamp_oak");
-   public static final aly<egh<?, ?>> x = sm.a("jungle_bush");
-   public static final aly<egh<?, ?>> y = sm.a("azalea_tree");
-   public static final aly<egh<?, ?>> z = sm.a("mangrove");
-   public static final aly<egh<?, ?>> A = sm.a("tall_mangrove");
-   public static final aly<egh<?, ?>> B = sm.a("cherry");
-   public static final aly<egh<?, ?>> C = sm.a("oak_bees_0002");
-   public static final aly<egh<?, ?>> D = sm.a("oak_bees_002");
-   public static final aly<egh<?, ?>> E = sm.a("oak_bees_005");
-   public static final aly<egh<?, ?>> F = sm.a("birch_bees_0002");
-   public static final aly<egh<?, ?>> G = sm.a("birch_bees_002");
-   public static final aly<egh<?, ?>> H = sm.a("birch_bees_005");
-   public static final aly<egh<?, ?>> I = sm.a("fancy_oak_bees_0002");
-   public static final aly<egh<?, ?>> J = sm.a("fancy_oak_bees_002");
-   public static final aly<egh<?, ?>> K = sm.a("fancy_oak_bees_005");
-   public static final aly<egh<?, ?>> L = sm.a("fancy_oak_bees");
-   public static final aly<egh<?, ?>> M = sm.a("cherry_bees_005");
+   public static final aly<egi<?, ?>> a = sm.a("crimson_fungus");
+   public static final aly<egi<?, ?>> b = sm.a("crimson_fungus_planted");
+   public static final aly<egi<?, ?>> c = sm.a("warped_fungus");
+   public static final aly<egi<?, ?>> d = sm.a("warped_fungus_planted");
+   public static final aly<egi<?, ?>> e = sm.a("huge_brown_mushroom");
+   public static final aly<egi<?, ?>> f = sm.a("huge_red_mushroom");
+   public static final aly<egi<?, ?>> g = sm.a("oak");
+   public static final aly<egi<?, ?>> h = sm.a("dark_oak");
+   public static final aly<egi<?, ?>> i = sm.a("pale_oak");
+   public static final aly<egi<?, ?>> j = sm.a("pale_oak_creaking");
+   public static final aly<egi<?, ?>> k = sm.a("birch");
+   public static final aly<egi<?, ?>> l = sm.a("acacia");
+   public static final aly<egi<?, ?>> m = sm.a("spruce");
+   public static final aly<egi<?, ?>> n = sm.a("pine");
+   public static final aly<egi<?, ?>> o = sm.a("jungle_tree");
+   public static final aly<egi<?, ?>> p = sm.a("fancy_oak");
+   public static final aly<egi<?, ?>> q = sm.a("jungle_tree_no_vine");
+   public static final aly<egi<?, ?>> r = sm.a("mega_jungle_tree");
+   public static final aly<egi<?, ?>> s = sm.a("mega_spruce");
+   public static final aly<egi<?, ?>> t = sm.a("mega_pine");
+   public static final aly<egi<?, ?>> u = sm.a("super_birch_bees_0002");
+   public static final aly<egi<?, ?>> v = sm.a("super_birch_bees");
+   public static final aly<egi<?, ?>> w = sm.a("swamp_oak");
+   public static final aly<egi<?, ?>> x = sm.a("jungle_bush");
+   public static final aly<egi<?, ?>> y = sm.a("azalea_tree");
+   public static final aly<egi<?, ?>> z = sm.a("mangrove");
+   public static final aly<egi<?, ?>> A = sm.a("tall_mangrove");
+   public static final aly<egi<?, ?>> B = sm.a("cherry");
+   public static final aly<egi<?, ?>> C = sm.a("oak_bees_0002");
+   public static final aly<egi<?, ?>> D = sm.a("oak_bees_002");
+   public static final aly<egi<?, ?>> E = sm.a("oak_bees_005");
+   public static final aly<egi<?, ?>> F = sm.a("birch_bees_0002");
+   public static final aly<egi<?, ?>> G = sm.a("birch_bees_002");
+   public static final aly<egi<?, ?>> H = sm.a("birch_bees_005");
+   public static final aly<egi<?, ?>> I = sm.a("fancy_oak_bees_0002");
+   public static final aly<egi<?, ?>> J = sm.a("fancy_oak_bees_002");
+   public static final aly<egi<?, ?>> K = sm.a("fancy_oak_bees_005");
+   public static final aly<egi<?, ?>> L = sm.a("fancy_oak_bees");
+   public static final aly<egi<?, ?>> M = sm.a("cherry_bees_005");
 
-   private static ejv.a a(dkl $$0, dkl $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new ejv.a(ela.a($$0), new eme($$2, $$3, $$4), ela.a($$1), new ekg(bsk.a($$5), bsk.a(0), 3), new ekd(1, 0, 1));
+   private static ejw.a a(dkm $$0, dkm $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new ejw.a(elb.a($$0), new emf($$2, $$3, $$4), elb.a($$1), new ekh(bsl.a($$5), bsl.a(0), 3), new eke(1, 0, 1));
    }
 
-   private static ejv.a a() {
-      return a(dkn.X, dkn.aK, 4, 2, 0, 2).a();
+   private static ejw.a a() {
+      return a(dko.X, dko.aK, 4, 2, 0, 2).a();
    }
 
-   private static ejv.a b() {
-      return a(dkn.Z, dkn.aM, 5, 2, 0, 2).a();
+   private static ejw.a b() {
+      return a(dko.Z, dko.aM, 5, 2, 0, 2).a();
    }
 
-   private static ejv.a c() {
-      return a(dkn.Z, dkn.aM, 5, 2, 6, 2).a();
+   private static ejw.a c() {
+      return a(dko.Z, dko.aM, 5, 2, 6, 2).a();
    }
 
-   private static ejv.a d() {
-      return a(dkn.aa, dkn.aN, 4, 8, 0, 2);
+   private static ejw.a d() {
+      return a(dko.aa, dko.aN, 4, 8, 0, 2);
    }
 
-   private static ejv.a e() {
-      return new ejv.a(ela.a(dkn.X), new ema(3, 11, 0), ela.a(dkn.aK), new ekk(bsk.a(2), bsk.a(4), 4), new ekd(0, 0, 0, OptionalInt.of(4))).a();
+   private static ejw.a e() {
+      return new ejw.a(elb.a(dko.X), new emb(3, 11, 0), elb.a(dko.aK), new ekl(bsl.a(2), bsl.a(4), 4), new eke(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static ejv.a f() {
-      return new ejv.a(
-            ela.a(dkn.ac),
-            new ely(7, 1, 0, new bsu(brq.<bsn>a().a(bsk.a(1), 1).a(bsk.a(2), 1).a(bsk.a(3), 1).a()), bst.a(2, 4), bst.a(-4, -3), bst.a(-1, 0)),
-            ela.a(dkn.aP),
-            new eki(bsk.a(4), bsk.a(0), bsk.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new ekd(1, 0, 2)
+   private static ejw.a f() {
+      return new ejw.a(
+            elb.a(dko.ac),
+            new elz(7, 1, 0, new bsv(brr.<bso>a().a(bsl.a(1), 1).a(bsl.a(2), 1).a(bsl.a(3), 1).a()), bsu.a(2, 4), bsu.a(-4, -3), bsu.a(-1, 0)),
+            elb.a(dko.aP),
+            new ekj(bsl.a(4), bsl.a(0), bsl.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new eke(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(rk<egh<?, ?>> $$0) {
-      jr<dkl> $$1 = $$0.a(mb.f);
-      eew $$2 = eew.a(
-         dkn.z,
-         dkn.A,
-         dkn.B,
-         dkn.C,
-         dkn.D,
-         dkn.E,
-         dkn.F,
-         dkn.G,
-         dkn.H,
-         dkn.bY,
-         dkn.bZ,
-         dkn.ca,
-         dkn.cb,
-         dkn.cc,
-         dkn.cd,
-         dkn.ce,
-         dkn.cf,
-         dkn.cg,
-         dkn.ch,
-         dkn.ci,
-         dkn.cj,
-         dkn.ck,
-         dkn.cl,
-         dkn.cm,
-         dkn.cn,
-         dkn.cJ,
-         dkn.ef,
-         dkn.fp,
-         dkn.fq,
-         dkn.fr,
-         dkn.fs,
-         dkn.fA,
-         dkn.fE,
-         dkn.fQ,
-         dkn.gI,
-         dkn.gJ,
-         dkn.kP,
-         dkn.kQ,
-         dkn.kV,
-         dkn.kW,
-         dkn.kY,
-         dkn.oD,
-         dkn.oJ,
-         dkn.oS,
-         dkn.oU,
-         dkn.oV,
-         dkn.oW,
-         dkn.oX,
-         dkn.sQ,
-         dkn.sR,
-         dkn.sS,
-         dkn.sT,
-         dkn.sU,
-         dkn.sV,
-         dkn.sW,
-         dkn.sY,
-         dkn.sZ,
-         dkn.ta
+   public static void a(rk<egi<?, ?>> $$0) {
+      jr<dkm> $$1 = $$0.a(mb.f);
+      eex $$2 = eex.a(
+         dko.z,
+         dko.A,
+         dko.B,
+         dko.C,
+         dko.D,
+         dko.E,
+         dko.F,
+         dko.G,
+         dko.H,
+         dko.bY,
+         dko.bZ,
+         dko.ca,
+         dko.cb,
+         dko.cc,
+         dko.cd,
+         dko.ce,
+         dko.cf,
+         dko.cg,
+         dko.ch,
+         dko.ci,
+         dko.cj,
+         dko.ck,
+         dko.cl,
+         dko.cm,
+         dko.cn,
+         dko.cJ,
+         dko.ef,
+         dko.fp,
+         dko.fq,
+         dko.fr,
+         dko.fs,
+         dko.fA,
+         dko.fE,
+         dko.fQ,
+         dko.gI,
+         dko.gJ,
+         dko.kP,
+         dko.kQ,
+         dko.kV,
+         dko.kW,
+         dko.kY,
+         dko.oD,
+         dko.oJ,
+         dko.oS,
+         dko.oU,
+         dko.oV,
+         dko.oW,
+         dko.oX,
+         dko.sQ,
+         dko.sR,
+         dko.sS,
+         dko.sT,
+         dko.sU,
+         dko.sV,
+         dko.sW,
+         dko.sY,
+         dko.sZ,
+         dko.ta
       );
-      sm.a($$0, a, egv.V, new ehe(dkn.oR.m(), dkn.oN.m(), dkn.lf.m(), dkn.oT.m(), $$2, false));
-      sm.a($$0, b, egv.V, new ehe(dkn.oR.m(), dkn.oN.m(), dkn.lf.m(), dkn.oT.m(), $$2, true));
-      sm.a($$0, c, egv.V, new ehe(dkn.oI.m(), dkn.oE.m(), dkn.oK.m(), dkn.oT.m(), $$2, false));
-      sm.a($$0, d, egv.V, new ehe(dkn.oI.m(), dkn.oE.m(), dkn.oK.m(), dkn.oT.m(), $$2, true));
+      sm.a($$0, a, egw.V, new ehf(dko.oR.m(), dko.oN.m(), dko.lf.m(), dko.oT.m(), $$2, false));
+      sm.a($$0, b, egw.V, new ehf(dko.oR.m(), dko.oN.m(), dko.lf.m(), dko.oT.m(), $$2, true));
+      sm.a($$0, c, egw.V, new ehf(dko.oI.m(), dko.oE.m(), dko.oK.m(), dko.oT.m(), $$2, false));
+      sm.a($$0, d, egw.V, new ehf(dko.oI.m(), dko.oE.m(), dko.oK.m(), dko.oT.m(), $$2, true));
       sm.a(
          $$0,
          e,
-         egv.r,
-         new ejb(
-            ela.a(dkn.fh.m().b(dok.f, Boolean.valueOf(true)).b(dok.g, Boolean.valueOf(false))),
-            ela.a(dkn.fj.m().b(dok.f, Boolean.valueOf(false)).b(dok.g, Boolean.valueOf(false))),
+         egw.r,
+         new ejc(
+            elb.a(dko.fh.m().b(dol.f, Boolean.valueOf(true)).b(dol.g, Boolean.valueOf(false))),
+            elb.a(dko.fj.m().b(dol.f, Boolean.valueOf(false)).b(dol.g, Boolean.valueOf(false))),
             3
          )
       );
       sm.a(
          $$0,
          f,
-         egv.q,
-         new ejb(ela.a(dkn.fi.m().b(dok.g, Boolean.valueOf(false))), ela.a(dkn.fj.m().b(dok.f, Boolean.valueOf(false)).b(dok.g, Boolean.valueOf(false))), 2)
+         egw.q,
+         new ejc(elb.a(dko.fi.m().b(dol.g, Boolean.valueOf(false))), elb.a(dko.fj.m().b(dol.f, Boolean.valueOf(false)).b(dol.g, Boolean.valueOf(false))), 2)
       );
-      elo $$3 = new elo(0.002F);
-      elo $$4 = new elo(0.01F);
-      elo $$5 = new elo(0.02F);
-      elo $$6 = new elo(0.05F);
-      elo $$7 = new elo(1.0F);
-      sm.a($$0, g, egv.f, a().c());
+      elp $$3 = new elp(0.002F);
+      elp $$4 = new elp(0.01F);
+      elp $$5 = new elp(0.02F);
+      elp $$6 = new elp(0.05F);
+      elp $$7 = new elp(1.0F);
+      sm.a($$0, g, egw.f, a().c());
       sm.a(
          $$0,
          h,
-         egv.f,
-         new ejv.a(ela.a(dkn.ad), new elz(6, 2, 1), ela.a(dkn.aQ), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         egw.f,
+         new ejw.a(elb.a(dko.ad), new ema(6, 2, 1), elb.a(dko.aQ), new ekk(bsl.a(0), bsl.a(0)), new ekd(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
       sm.a(
          $$0,
          i,
-         egv.f,
-         new ejv.a(ela.a(dkn.ae), new elz(6, 2, 1), ela.a(dkn.aR), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new els(0.15F, 0.4F, 0.8F)))
+         egw.f,
+         new ejw.a(elb.a(dko.ae), new ema(6, 2, 1), elb.a(dko.aR), new ekk(bsl.a(0), bsl.a(0)), new ekd(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new elt(0.15F, 0.4F, 0.8F)))
             .a()
             .c()
       );
       sm.a(
          $$0,
          j,
-         egv.f,
-         new ejv.a(ela.a(dkn.ae), new elz(6, 2, 1), ela.a(dkn.aR), new ekj(bsk.a(0), bsk.a(0)), new ekc(1, 1, 0, 1, 2, OptionalInt.empty()))
-            .a(ImmutableList.of(new els(0.15F, 0.4F, 0.8F), new elq(1.0F)))
+         egw.f,
+         new ejw.a(elb.a(dko.ae), new ema(6, 2, 1), elb.a(dko.aR), new ekk(bsl.a(0), bsl.a(0)), new ekd(1, 1, 0, 1, 2, OptionalInt.empty()))
+            .a(ImmutableList.of(new elt(0.15F, 0.4F, 0.8F), new elr(1.0F)))
             .a()
             .c()
       );
-      sm.a($$0, k, egv.f, b().c());
-      sm.a($$0, l, egv.f, new ejv.a(ela.a(dkn.ab), new emb(5, 2, 2), ela.a(dkn.aO), new ekf(bsk.a(2), bsk.a(0)), new ekd(1, 0, 2)).a().c());
-      sm.a($$0, B, egv.f, f().c());
-      sm.a($$0, M, egv.f, f().a(List.of($$6)).c());
-      sm.a($$0, m, egv.f, new ejv.a(ela.a(dkn.Y), new eme(5, 2, 1), ela.a(dkn.aL), new ekr(bst.a(2, 3), bst.a(0, 2), bst.a(1, 2)), new ekd(2, 0, 2)).a().c());
-      sm.a($$0, n, egv.f, new ejv.a(ela.a(dkn.Y), new eme(6, 4, 0), ela.a(dkn.aL), new ekp(bsk.a(1), bsk.a(1), bst.a(3, 4)), new ekd(2, 0, 2)).a().c());
-      sm.a($$0, o, egv.f, d().a(ImmutableList.of(new elp(0.2F), elv.b, new elr(0.25F))).a().c());
-      sm.a($$0, p, egv.f, e().c());
-      sm.a($$0, q, egv.f, d().a().c());
+      sm.a($$0, k, egw.f, b().c());
+      sm.a($$0, l, egw.f, new ejw.a(elb.a(dko.ab), new emc(5, 2, 2), elb.a(dko.aO), new ekg(bsl.a(2), bsl.a(0)), new eke(1, 0, 2)).a().c());
+      sm.a($$0, B, egw.f, f().c());
+      sm.a($$0, M, egw.f, f().a(List.of($$6)).c());
+      sm.a($$0, m, egw.f, new ejw.a(elb.a(dko.Y), new emf(5, 2, 1), elb.a(dko.aL), new eks(bsu.a(2, 3), bsu.a(0, 2), bsu.a(1, 2)), new eke(2, 0, 2)).a().c());
+      sm.a($$0, n, egw.f, new ejw.a(elb.a(dko.Y), new emf(6, 4, 0), elb.a(dko.aL), new ekq(bsl.a(1), bsl.a(1), bsu.a(3, 4)), new eke(2, 0, 2)).a().c());
+      sm.a($$0, o, egw.f, d().a(ImmutableList.of(new elq(0.2F), elw.b, new els(0.25F))).a().c());
+      sm.a($$0, p, egw.f, e().c());
+      sm.a($$0, q, egw.f, d().a().c());
       sm.a(
          $$0,
          r,
-         egv.f,
-         new ejv.a(ela.a(dkn.aa), new emd(10, 2, 19), ela.a(dkn.aN), new ekn(bsk.a(2), bsk.a(0), 2), new ekd(1, 1, 2))
-            .a(ImmutableList.of(elv.b, new elr(0.25F)))
+         egw.f,
+         new ejw.a(elb.a(dko.aa), new eme(10, 2, 19), elb.a(dko.aN), new eko(bsl.a(2), bsl.a(0), 2), new eke(1, 1, 2))
+            .a(ImmutableList.of(elw.b, new els(0.25F)))
             .c()
       );
       sm.a(
          $$0,
          s,
-         egv.f,
-         new ejv.a(ela.a(dkn.Y), new emc(13, 2, 14), ela.a(dkn.aL), new eko(bsk.a(0), bsk.a(0), bst.a(13, 17)), new ekd(1, 1, 2))
-            .a(ImmutableList.of(new elm(ela.a(dkn.l))))
+         egw.f,
+         new ejw.a(elb.a(dko.Y), new emd(13, 2, 14), elb.a(dko.aL), new ekp(bsl.a(0), bsl.a(0), bsu.a(13, 17)), new eke(1, 1, 2))
+            .a(ImmutableList.of(new eln(elb.a(dko.l))))
             .c()
       );
       sm.a(
          $$0,
          t,
-         egv.f,
-         new ejv.a(ela.a(dkn.Y), new emc(13, 2, 14), ela.a(dkn.aL), new eko(bsk.a(0), bsk.a(0), bst.a(3, 7)), new ekd(1, 1, 2))
-            .a(ImmutableList.of(new elm(ela.a(dkn.l))))
+         egw.f,
+         new ejw.a(elb.a(dko.Y), new emd(13, 2, 14), elb.a(dko.aL), new ekp(bsl.a(0), bsl.a(0), bsu.a(3, 7)), new eke(1, 1, 2))
+            .a(ImmutableList.of(new eln(elb.a(dko.l))))
             .c()
       );
-      sm.a($$0, u, egv.f, c().a(ImmutableList.of($$3)).c());
-      sm.a($$0, v, egv.f, c().a(ImmutableList.of($$7)).c());
-      sm.a($$0, w, egv.f, a(dkn.X, dkn.aK, 5, 3, 0, 3).a(ImmutableList.of(new elr(0.25F))).c());
-      sm.a($$0, x, egv.f, new ejv.a(ela.a(dkn.aa), new eme(1, 0, 0), ela.a(dkn.aK), new ekh(bsk.a(2), bsk.a(1), 2), new ekd(0, 0, 0)).c());
+      sm.a($$0, u, egw.f, c().a(ImmutableList.of($$3)).c());
+      sm.a($$0, v, egw.f, c().a(ImmutableList.of($$7)).c());
+      sm.a($$0, w, egw.f, a(dko.X, dko.aK, 5, 3, 0, 3).a(ImmutableList.of(new els(0.25F))).c());
+      sm.a($$0, x, egw.f, new ejw.a(elb.a(dko.aa), new emf(1, 0, 0), elb.a(dko.aK), new eki(bsl.a(2), bsl.a(1), 2), new eke(0, 0, 0)).c());
       sm.a(
          $$0,
          y,
-         egv.f,
-         new ejv.a(
-               ela.a(dkn.X),
-               new elx(4, 2, 0, 3, bst.a(1, 2)),
-               new elk(brq.<dxu>a().a(dkn.aT.m(), 3).a(dkn.aU.m(), 1)),
-               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 50),
-               new ekd(1, 0, 1)
+         egw.f,
+         new ejw.a(
+               elb.a(dko.X),
+               new ely(4, 2, 0, 3, bsu.a(1, 2)),
+               new ell(brr.<dxv>a().a(dko.aT.m(), 3).a(dko.aU.m(), 1)),
+               new ekr(bsl.a(3), bsl.a(0), bsl.a(2), 50),
+               new eke(1, 0, 1)
             )
-            .a(ela.a(dkn.tc))
+            .a(elb.a(dko.tc))
             .b()
             .c()
       );
       sm.a(
          $$0,
          z,
-         egv.f,
-         new ejv.a(
-               ela.a(dkn.af),
-               new emh(2, 1, 4, bst.a(1, 4), 0.5F, bst.a(0, 1), $$1.b(axu.cm)),
-               ela.a(dkn.aS),
-               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 70),
+         egw.f,
+         new ejw.a(
+               elb.a(dko.af),
+               new emi(2, 1, 4, bsu.a(1, 4), 0.5F, bsu.a(0, 1), $$1.b(axu.cm)),
+               elb.a(dko.aS),
+               new ekr(bsl.a(3), bsl.a(0), bsl.a(2), 70),
                Optional.of(
-                  new ekw(
-                     bst.a(1, 3),
-                     ela.a(dkn.ag),
-                     Optional.of(new eku(ela.a(dkn.sV), 0.5F)),
-                     new ekv($$1.b(axu.cn), ju.a(dkl::p, dkn.td, dkn.ah), ela.a(dkn.ah), 8, 15, 0.2F)
+                  new ekx(
+                     bsu.a(1, 3),
+                     elb.a(dko.ag),
+                     Optional.of(new ekv(elb.a(dko.sV), 0.5F)),
+                     new ekw($$1.b(axu.cn), ju.a(dkm::p, dko.td, dko.ah), elb.a(dko.ah), 8, 15, 0.2F)
                   )
                ),
-               new ekd(2, 0, 2)
+               new eke(2, 0, 2)
             )
             .a(
                List.of(
-                  new elr(0.125F), new eln(0.14F, 1, 0, new elg(ela.a(dkn.H.m().b(dpi.d, Boolean.valueOf(true))), dpi.b, bst.a(0, 4)), 2, List.of(jm.a)), $$4
+                  new els(0.125F), new elo(0.14F, 1, 0, new elh(elb.a(dko.H.m().b(dpj.d, Boolean.valueOf(true))), dpj.b, bsu.a(0, 4)), 2, List.of(jm.a)), $$4
                )
             )
             .a()
@@ -273,39 +273,39 @@ public class sr {
       sm.a(
          $$0,
          A,
-         egv.f,
-         new ejv.a(
-               ela.a(dkn.af),
-               new emh(4, 1, 9, bst.a(1, 6), 0.5F, bst.a(0, 1), $$1.b(axu.cm)),
-               ela.a(dkn.aS),
-               new ekq(bsk.a(3), bsk.a(0), bsk.a(2), 70),
+         egw.f,
+         new ejw.a(
+               elb.a(dko.af),
+               new emi(4, 1, 9, bsu.a(1, 6), 0.5F, bsu.a(0, 1), $$1.b(axu.cm)),
+               elb.a(dko.aS),
+               new ekr(bsl.a(3), bsl.a(0), bsl.a(2), 70),
                Optional.of(
-                  new ekw(
-                     bst.a(3, 7),
-                     ela.a(dkn.ag),
-                     Optional.of(new eku(ela.a(dkn.sV), 0.5F)),
-                     new ekv($$1.b(axu.cn), ju.a(dkl::p, dkn.td, dkn.ah), ela.a(dkn.ah), 8, 15, 0.2F)
+                  new ekx(
+                     bsu.a(3, 7),
+                     elb.a(dko.ag),
+                     Optional.of(new ekv(elb.a(dko.sV), 0.5F)),
+                     new ekw($$1.b(axu.cn), ju.a(dkm::p, dko.td, dko.ah), elb.a(dko.ah), 8, 15, 0.2F)
                   )
                ),
-               new ekd(3, 0, 2)
+               new eke(3, 0, 2)
             )
             .a(
                List.of(
-                  new elr(0.125F), new eln(0.14F, 1, 0, new elg(ela.a(dkn.H.m().b(dpi.d, Boolean.valueOf(true))), dpi.b, bst.a(0, 4)), 2, List.of(jm.a)), $$4
+                  new els(0.125F), new elo(0.14F, 1, 0, new elh(elb.a(dko.H.m().b(dpj.d, Boolean.valueOf(true))), dpj.b, bsu.a(0, 4)), 2, List.of(jm.a)), $$4
                )
             )
             .a()
             .c()
       );
-      sm.a($$0, C, egv.f, a().a(List.of($$3)).c());
-      sm.a($$0, D, egv.f, a().a(List.of($$5)).c());
-      sm.a($$0, E, egv.f, a().a(List.of($$6)).c());
-      sm.a($$0, F, egv.f, b().a(List.of($$3)).c());
-      sm.a($$0, G, egv.f, b().a(List.of($$5)).c());
-      sm.a($$0, H, egv.f, b().a(List.of($$6)).c());
-      sm.a($$0, I, egv.f, e().a(List.of($$3)).c());
-      sm.a($$0, J, egv.f, e().a(List.of($$5)).c());
-      sm.a($$0, K, egv.f, e().a(List.of($$6)).c());
-      sm.a($$0, L, egv.f, e().a(List.of($$7)).c());
+      sm.a($$0, C, egw.f, a().a(List.of($$3)).c());
+      sm.a($$0, D, egw.f, a().a(List.of($$5)).c());
+      sm.a($$0, E, egw.f, a().a(List.of($$6)).c());
+      sm.a($$0, F, egw.f, b().a(List.of($$3)).c());
+      sm.a($$0, G, egw.f, b().a(List.of($$5)).c());
+      sm.a($$0, H, egw.f, b().a(List.of($$6)).c());
+      sm.a($$0, I, egw.f, e().a(List.of($$3)).c());
+      sm.a($$0, J, egw.f, e().a(List.of($$5)).c());
+      sm.a($$0, K, egw.f, e().a(List.of($$6)).c());
+      sm.a($$0, L, egw.f, e().a(List.of($$7)).c());
    }
 }
